--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -31,6 +31,9 @@ get_cansim_vector( c(
 
 
 ```
+The graph shows that both the monthly and quarterly GDPs increase at almost exactly the same rate. This suggests that
+perhaps the two are highly correlated.
+
 
 In order to get a closer look at the existing pattern, we separated the monthly and quarterly GDP and then graphed them.
 ```{r}
