Most recent attempt at getting rid of the NA values and replacing them with 0's

--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -92,7 +92,7 @@ Here, we can see that the variance between the values are more or less the same 
 ```{r}
 ncastSP %>% filter(year(Date) >= 2018 & year(Date) <= 2019) -> ncast1
 ncast1 %>% mutate(`monthly GDP (basic prices)` = case_when(
-                                  `monthly GDP (basic prices)` == NA ~ 0, TRUE ~ 0))
+                                  `monthly GDP (basic prices)` == NA ~ 0, TRUE ~ `monthly GDP (basic prices)`))
 
 apps2 %>% mutate(Price = case_when(
                               Price == 0 ~ Price, 
