--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -92,11 +92,21 @@ Here, we can see that the variance between the values are more or less the same 
 ```{r}
 ncastSP %>% filter(year(Date) >= 2018 & year(Date) <= 2019) -> ncast1
 
-ncast.1 %>% mutate(monthly = case_when(
-                                  `monthly GDP (basic prices)` != NA ~ 0, TRUE ~ NA_real_))
+ncast1 %>% mutate(monthly = case_when(
+                                  `monthly GDP (basic prices)` != NA ~ 0,
+                                  is.na(`monthly GDP (basic prices)`) ~ 0,
+                                  TRUE ~ NA_real_))
 
 ncast1 %>% mutate(monthly = case_when(
-                                  `monthly GDP (basic prices)` == NA ~ 0, TRUE ~ `monthly GDP (basic prices)`))
+                                  `monthly GDP (basic prices)` == NA ~ 0, 
+                                  is.na(`monthly GDP (basic prices)`) ~ 0,
+                                  TRUE ~ `monthly GDP (basic prices)`)) %>%
+  mutate(quarterly = case_when(
+                                  `quarterly GDP (expend-based)` == NA ~ 0, 
+                                  is.na(`quarterly GDP (expend-based)`) ~ 0,
+                                  TRUE ~ `quarterly GDP (expend-based)`))
+
+
 
 ```
 
