--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -197,16 +197,31 @@ plot(X2.l.d)
 ```
 
 
-
 ```{r}
-# ACF of differenced GDP seems
-acf( diff(X2$Q), na.action = na.pass )
-acf( X2.l.d$Q, na.action = na.pass )
+# ACF PACF of differenced GDP seems
+acf( diff(X2$Q), na.action = na.pass ) 
+acf( X2.l.d$Q, na.action = na.pass ) ;pacf( diff(X2$Q), na.action = na.pass )
 ```
 
+Arima models w/past information only -> 
+      w/ past information with M0 (start of quarter forecast) + M1 (1st month nowcast) + M2 (2nd month nowcast)
 ```{r}
-pacf( diff(X2$Q), na.action = na.pass )
+model.1 <- arima( x = X2.l.d$Q, order=c(1,1,0) )
+model.2 <- arima( x = X2.l.d$Q, order=c(1,1,0),  xreg = X2.l.d$M0)
+model.3 <- arima( x = X2.l.d$Q, order=c(1,1,0),  xreg = X2.l.d[,c("M0","M1")])
+model.4 <- arima( x = X2.l.d$Q, order=c(1,1,0),  xreg = X2.l.d[,c("M0","M1","M2")])
+model.1 ; model.2 ; model.3 ; model.4
 ```
+
+Comparing AIC/BIC of models 
+```{r}
+AICS <- c(AIC(model.1),AIC(model.2),AIC(model.3),AIC(model.4))
+BICS <- c(BIC(model.1),BIC(model.2),BIC(model.3),BIC(model.4))
+Compare <- cbind(Aics,Bics)
+Compare
+auto.arima(X2.l.d$Q)
+```
+
 
 ```{r}
 # model w/ past information only 
