--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -217,7 +217,7 @@ Comparing AIC/BIC of models
 ```{r}
 AICS <- c(AIC(model.1),AIC(model.2),AIC(model.3),AIC(model.4))
 BICS <- c(BIC(model.1),BIC(model.2),BIC(model.3),BIC(model.4))
-Compare <- cbind(Aics,Bics)
+Compare <- cbind(AICS,BICS)
 Compare
 auto.arima(X2.l.d$Q)
 ```
