--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -267,7 +267,7 @@ wages <- read_csv("Wages, salaries and employers' social contributions (x 1,000)
 
 ```{r}
 # To get just the data that is seasonally adjusted
-wages <- wages %>% filter(`Seasonal adjustment` == "Seasonally adjusted") %>% filter(GEO=="Canada") %>% filter(Sector == "Wages and salaries")
+wages <- wages %>% filter(`Seasonal adjustment` == "Seasonally adjusted") %>% filter(GEO != "Outside Canada")
 
 wages
 ```
