LFS now has a date variable

--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -266,9 +266,41 @@ wages <- read_csv("Wages, salaries and employers' social contributions (x 1,000)
 ```
 
 ```{r}
+LFS_2018 <- LFS_2018 %>% unite(survdate, survyear, survmnth, sep = "-") %>% mutate(survdate = paste(survdate, "1", sep = "-"))
+
+LFS_2018 %>% mutate(survdate = ymd(survdate))
+```
+
+
+```{r}
 # To get just the data that is seasonally adjusted
 wages <- wages %>% filter(`Seasonal adjustment` == "Seasonally adjusted") %>% filter(GEO != "Outside Canada")
 
 wages
+```
+
+```{r}
+## Now to turn wages/LFS into a TS
+
+Q.1 = wages %>%  
+  # find year & quarter
+  mutate( Y = year( Date ), Q = quarter( Date ),
+          index = yearqtr( Y + Q/4 ) ) %>%  
+  xts( x=.$VALUE, order.by =.$index) 
+# plot(Q)
+# Monthly data 
+M = X2raw %>%  
+  filter( VECTOR == "v65201210" ) %>% 
+  # find year, quarter, month, and month-in-quarter
+  mutate( Y = year( Date ), Q = quarter( Date ), 
+          index = yearqtr( Y + Q/4 ), 
+          M = month( Date ),
+          MinQ = paste( "M", M%%3, sep="" ) ) %>%  
+  # spread monthly data into 3 columns one for each month-in-quarter
+  pivot_wider(id_cols = index, names_from = MinQ, 
+              values_from = VALUE ) %>% 
+  # take lag for M0
+  mutate( M0 = lag(M0) ) %>% 
+  xts( x=.[,c("M0","M1","M2")], order.by =.$index)
 ```
 
